bin/xserver/src/bottom_pane/snapshots/chaos_xserver__bottom_pane__chat_composer__tests__footer_mode_hidden_while_typing.snap
---
source: bin/xserver/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› h                                                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
